--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "type": "module",
   "name": "move_element",
   "version": "1.0.0",
   "description": "h1",
   "main": "src/index.js",
   "scripts": {
     "test": "jest --coverage",
-    "serve": "webpack serve"
+    "serve": "webpack serve",
+    "build": "webpack"
   },
   "author": "Igor Sverchkov",
   "license": "ISC",
@@ -15,8 +15,14 @@
     "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-jest": "^27.6.0",
+    "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
     "webpack": "^5.90.1",
+    "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "babel-loader": "^9.1.3",
+    "fs.promises": "^0.1.2"
   }
 }
