--- a/babel.config.json
+++ b/babel.config.json
@@ -3,8 +3,11 @@
     [
       "@babel/preset-env",
       {
-        "useBuiltIns": "entry",
-        "corejs": "3.22"
+        "targets": {
+          "node": "current"
+        },
+        "useBuiltIns": "usage",
+        "corejs": "3.6.5"
       }
     ]
   ]
