--- a/package.json
+++ b/package.json
@@ -1,28 +1,34 @@
 {
-  "name": "move_element",
+  "name": "ajs",
   "version": "1.0.0",
-  "description": "h1",
-  "main": "src/index.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
+    "start": "webpack serve --open --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
+    "lint": "eslint .",
     "test": "jest --coverage",
-    "serve": "webpack serve",
-    "build": "webpack"
+    "coverage": "jest --coverage"
   },
-  "author": "Igor Sverchkov",
+  "author": "Evgeniy Malikov <evgeny.m3v@yandex.ru>",
   "license": "ISC",
   "devDependencies": {
-    "@babel/preset-env": "^7.23.6",
-    "eslint": "^8.56.0",
-    "eslint-config-airbnb": "^19.0.4",
+    "@babel/core": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
+    "@types/jest": "^29.5.8",
+    "babel-jest": "^29.7.0",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
+    "eslint": "^8.54.0",
     "eslint-plugin-jest": "^27.6.0",
-    "html-webpack-plugin": "^5.6.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.3",
+    "image-webpack-loader": "^8.1.0",
     "jest": "^29.7.0",
-    "webpack": "^5.90.1",
+    "mini-css-extract-plugin": "^2.7.6",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
-  },
-  "dependencies": {
-    "babel-loader": "^9.1.3",
-    "fs.promises": "^0.1.2"
   }
 }
